namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-challenge-support-intervention-plan-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-challenge-support-intervention-plan-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public_move-and-improve"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Move and Improve: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-challenge-support-intervention-plan-prototype"
    cloud-platform.justice.gov.uk/team-name: "hmpps-move-and-improve"
    cloud-platform.justice.gov.uk/review-after: ""
